Fixed broken css custom properties (from refactoring in IntelliJ)

--- a/src/main/java/edu/stanford/bmir/protege/web/resources/webprotege-cell-list.css
+++ b/src/main/java/edu/stanford/bmir/protege/web/resources/webprotege-cell-list.css
@@ -9,8 +9,8 @@
     }
 
     .cellListSelectedItem {
-        color: literal("var(--selectedItemColor)");
-        background: literal("var(--selectedItemBackground)");
+        color: literal("var(--selectedItem-color)");
+        background: literal("var(--selectedItem-background-color)");
     }
 
     .cellListWidget {
